--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"start": "vue-cli-service serve",
-		"build": "vue-cli-service build"
+		"dev": "vite",
+		"build": "vite build"
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
@@ -17,17 +17,10 @@
 		"vuex": "^3.4.0"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "~4.5.0",
-		"@vue/cli-plugin-router": "~4.5.0",
-		"@vue/cli-plugin-vuex": "~4.5.0",
-		"@vue/cli-service": "~4.5.0",
-		"less": "^3.0.4",
-		"less-loader": "^5.0.0",
+		"less": "^4.1.1",
+		"less-loader": "^8.1.0",
+		"vite": "^2.1.5",
+		"vite-plugin-vue2": "^1.4.3",
 		"vue-template-compiler": "^2.6.11"
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not dead"
-	]
+	}
 }
