--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"element-ui": "^2.15.1",
 		"qs": "^6.10.1",
 		"style-resources-loader": "^1.4.1",
+		"vditor": "^3.8.4",
 		"vue": "^2.6.11",
 		"vue-router": "^3.2.0",
 		"vuex": "^3.4.0"
