--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
+		"echarts": "^5.1.1",
 		"element-ui": "^2.15.1",
 		"qs": "^6.10.1",
 		"style-resources-loader": "^1.4.1",
