--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"style-resources-loader": "^1.4.1",
 		"vditor": "^3.8.4",
 		"vue": "^2.6.11",
+		"vue-grid-layout": "^2.3.12",
 		"vue-router": "^3.2.0",
 		"vuex": "^3.4.0"
 	},
