配置/添加修改环境配置文件，设置代理头

--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,10 @@
 # import.meta.env 可以获取环境变量
 
 # 设置环境模式
-ENV='dev'
+ENV='development'
+
+# 设置api代理头
+VITE_APP_BASE_PATH='/api'
 
 # 设置api基地址
-VITE_APP_BASE_API='http://127.0.0.1:9080'
+VITE_APP_BASE_URL='http://localhost:9080'
