--- a/.env.beta
+++ b/.env.beta
@@ -2,8 +2,10 @@
 # vite serve 时是development开发模式，vite build时是production生产模式。
 # import.meta.env 可以获取环境变量
 
+# 不同于开发环境与生产环境，beta向线上接口请求数据且使用开发环境变量
+
 # 设置环境模式
-ENV='production'
+ENV='development'
 
 # 设置api代理头
 VITE_APP_BASE_PATH='/api'
