--- a/.env.beta
+++ b/.env.beta
@@ -5,7 +5,7 @@
 # 不同于开发环境与生产环境，beta向线上接口请求数据且使用开发环境变量
 
 # 设置环境模式
-ENV='development'
+NODE_ENV='development'
 
 # 设置api代理头
 VITE_APP_BASE_PATH='/api'
