--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite serve",
-		"dev:beta": "vite serve --mode beta",
+		"dev": "cross-env NODE_ENV=development vite serve",
+		"dev:beta": "cross-env NODE_ENV=beta vite serve --mode beta",
 		"build": "vite build --base=/page/back/"
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
 		"core-js": "^3.16.2",
+		"cross-env": "^7.0.3",
+		"dotenv": "^10.0.0",
 		"echarts": "^5.1.2",
 		"element-ui": "^2.15.5",
 		"qs": "^6.10.1",
@@ -18,6 +20,7 @@
 		"vue": "^2.6.14",
 		"vue-grid-layout": "^2.3.12",
 		"vue-router": "^3.5.2",
+		"vue-socket.io": "^3.0.10",
 		"vuex": "^3.6.2"
 	},
 	"devDependencies": {
