--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@
 NODE_ENV='production'
 
 # 设置api代理头
-VITE_APP_BASE_PATH='/api'
+VITE_APP_BASE_PATH=''
 
 # 设置api基地址
-VITE_APP_BASE_URL='http://api.sunqm.com'
+VITE_APP_BASE_URL=''
