--- a/.env.beta
+++ b/.env.beta
@@ -12,3 +12,6 @@ VITE_APP_BASE_PATH='/api'
 
 # 设置api基地址
 VITE_APP_BASE_URL='http://api.sunqm.com'
+
+# socket
+VITE_SOCKET_URL='http://api.sunqm.com'
