--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,6 @@ VITE_APP_BASE_PATH='/api'
 
 # 设置api基地址
 VITE_APP_BASE_URL='http://localhost:9080'
+
+# socket
+VITE_SOCKET_URL='http://localhost:9080'
