--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"axios": "^0.24.0",
 		"core-js": "^3.19.3",
 		"cross-env": "^7.0.3",
+		"crypto-js": "^4.1.1",
 		"dotenv": "^10.0.0",
 		"echarts": "^5.2.2",
 		"element-ui": "^2.15.6",
