--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"vue": "^2.6.14",
 		"vue-grid-layout": "^2.3.12",
 		"vue-router": "^3.5.3",
-		"vuex": "^3.6.2"
+		"vuex": "^3.6.2",
+		"xterm": "^4.16.0",
+		"xterm-addon-fit": "^0.5.0"
 	},
 	"devDependencies": {
 		"less": "^4.1.2",
