update:整理项目结构，增加微服务模块

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "vite build --base=/page/back/"
 	},
 	"dependencies": {
+		"@micro-zoe/micro-app": "^0.8.10",
 		"axios": "^0.24.0",
 		"core-js": "^3.19.3",
 		"cross-env": "^7.0.3",
