--- a/.env.beta
+++ b/.env.beta
@@ -13,5 +13,8 @@ VITE_APP_BASE_PATH='/api'
 # 设置api基地址
 VITE_APP_BASE_URL='http://api.sunqm.com'
 
+# 路由位置
+VITE_APP_ROUTE_PATH='/page/back'
+
 # socket
 VITE_SOCKET_URL='http://api.sunqm.com'
