--- a/.env.development
+++ b/.env.development
@@ -11,5 +11,8 @@ VITE_APP_BASE_PATH='/api'
 # 设置api基地址
 VITE_APP_BASE_URL='http://localhost:9080'
 
+# 路由位置
+VITE_APP_ROUTE_PATH='/page/back'
+
 # socket
 VITE_SOCKET_URL='http://localhost:9080'
