--- a/.env.production
+++ b/.env.production
@@ -11,5 +11,8 @@ VITE_APP_BASE_PATH=''
 # 设置api基地址
 VITE_APP_BASE_URL=''
 
+# 路由位置
+VITE_APP_ROUTE_PATH='/page/back'
+
 # socket
 VITE_SOCKET_URL='http://api.sunqm.com'
