update:配置文件修改

--- a/.env.beta
+++ b/.env.beta
@@ -11,10 +11,10 @@ NODE_ENV='development'
 VITE_APP_BASE_PATH='/api'
 
 # 设置api基地址
-VITE_APP_BASE_URL='http://api.sunqm.com'
+VITE_APP_BASE_URL='http://sunqm.com/api'
 
 # 路由位置
 VITE_APP_ROUTE_PATH='/page/back'
 
 # socket
-VITE_SOCKET_URL='http://api.sunqm.com'
+VITE_SOCKET_URL='http://sunqm.com/api'
