--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development vite serve",
 		"dev:beta": "cross-env NODE_ENV=beta vite serve --mode beta",
-		"build": "vite build --base=/page/back/"
+		"build": "vite build --base=/page/back/",
+		"lint": "eslint --fix --ext .js,.vue src"
 	},
 	"dependencies": {
 		"@micro-zoe/micro-app": "^0.8.10",
@@ -27,6 +28,12 @@
 		"xterm-addon-fit": "^0.5.0"
 	},
 	"devDependencies": {
+		"eslint": "^8.0.1",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-vue": "^9.10.0",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
 		"vite": "^2.6.14",
