--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint-plugin-n": "^15.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-vue": "^9.10.0",
+		"jszip": "^3.10.1",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
 		"vite": "^2.6.14",
