--- a/.env.beta
+++ b/.env.beta
@@ -17,4 +17,4 @@ VITE_APP_BASE_URL='http://sunqm.com/api'
 VITE_APP_ROUTE_PATH='/page/back'
 
 # socket
-VITE_SOCKET_URL='http://sunqm.com/api'
+VITE_SOCKET_URL='/api'
