--- a/.env.production
+++ b/.env.production
@@ -15,4 +15,4 @@ VITE_APP_BASE_URL=''
 VITE_APP_ROUTE_PATH='/page/back'
 
 # socket
-VITE_SOCKET_URL='http://sunqm.com/api'
+VITE_SOCKET_URL='http://sunqm.com'
