--- a/.env.production
+++ b/.env.production
@@ -16,4 +16,4 @@ VITE_APP_ROUTE_PATH='/page/back'
 
 # socket
 # todo socket.io-client 默认会向 域名 的 /socket.io/ 不断发送请求，暂时没有找到优化方案，先在nginx进行配置
-VITE_SOCKET_URL=''
+VITE_SOCKET_URL='/api'
