环境变量微调

--- a/.env.beta
+++ b/.env.beta
@@ -10,8 +10,8 @@ NODE_ENV='development'
 # 设置api代理头
 VITE_APP_BASE_PATH='/api'
 
-# 设置api基地址
-VITE_APP_BASE_URL='http://sunqm.com/api'
+# 设置api基地址，注意这个地方如果有https就不要用http的形式，nginx里重定向会导致请求类型发送改变
+VITE_APP_BASE_URL='https://sunqm.com/api'
 
 # 路由位置
 VITE_APP_ROUTE_PATH='/page/back'
