--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"dotenv": "^10.0.0",
 		"echarts": "^5.2.2",
 		"element-ui": "^2.15.6",
+		"marked": "^5.0.0",
+		"openai": "^3.2.1",
 		"qs": "^6.10.2",
 		"style-resources-loader": "^1.4.1",
 		"vditor": "^3.8.15",
