--- a/.env.development
+++ b/.env.development
@@ -16,3 +16,6 @@ VITE_APP_ROUTE_PATH='/page/back'
 
 # socket
 VITE_SOCKET_URL='http://localhost:9080'
+
+# todo openai的key 后续考虑使用接口请求获取
+VITE_APP_OPENAI_KEY=''
