--- a/.env.development
+++ b/.env.development
@@ -16,3 +16,6 @@ VITE_APP_ROUTE_PATH='/page/back'
 
 # socket
 VITE_SOCKET_URL='http://localhost:9080'
+
+# com路径
+VITE_COM_URL='http://localhost:3010/comapp/'
