--- a/.env.beta
+++ b/.env.beta
@@ -17,7 +17,7 @@ VITE_APP_BASE_URL='https://sunqm.com/api'
 VITE_APP_ROUTE_PATH='/page/back'
 
 # socket
-VITE_SOCKET_URL='/api'
+VITE_SOCKET_URL='https://sunqm.com'
 
 # com路径
 VITE_COM_URL='https://sunqm.com/page/com/'
