--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev:beta": "cross-env NODE_ENV=beta vite serve --mode beta",
 		"build": "vite build --base=/page/back/",
 		"lint": "eslint --fix --ext .js,.vue src",
-		"release": "vite build --base=/page/back/ && git commit -a -m publish && git push"
+		"release": "vite build --base=/page/back/ && git commit -a -m publish && git push",
+		"test:cypress": "cypress open --e2e --browser chrome"
 	},
 	"dependencies": {
 		"@micro-zoe/micro-app": "^0.8.10",
@@ -17,30 +18,30 @@
 		"crypto-js": "^4.1.1",
 		"dotenv": "^10.0.0",
 		"echarts": "^5.2.2",
-		"element-ui": "^2.15.6",
+		"element-plus": "^2.4.2",
 		"marked": "^5.0.0",
+		"pinia": "^2.1.7",
 		"qs": "^6.10.2",
 		"style-resources-loader": "^1.4.1",
 		"vditor": "^3.8.15",
-		"vue": "^2.6.14",
-		"vue-grid-layout": "^2.3.12",
-		"vue-router": "^3.5.3",
-		"vuex": "^3.6.2",
-		"xterm": "^4.16.0",
-		"xterm-addon-fit": "^0.5.0"
+		"vite": "^4.0.0",
+		"vue": "^3.3.8",
+		"vue-grid-layout": "^3.0.0-beta1",
+		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
-		"eslint": "^8.0.1",
-		"eslint-config-standard": "^17.0.0",
-		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-n": "^15.0.0",
+		"@vitejs/plugin-vue": "^4.5.0",
+		"cypress": "^13.6.2",
+		"eslint": "^8.56.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-cypress": "^2.15.1",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-n": "^16.5.0",
 		"eslint-plugin-promise": "^6.0.0",
-		"eslint-plugin-vue": "^9.10.0",
+		"eslint-plugin-vue": "^9.19.2",
 		"jszip": "^3.10.1",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
-		"vite": "^2.6.14",
-		"vite-plugin-vue2": "^1.9.0",
 		"vue-template-compiler": "^2.6.14"
 	}
 }
