--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
 		"build": "vite build --base=/page/back/",
 		"lint": "eslint --fix --ext .js,.vue src",
 		"release": "vite build --base=/page/back/ && git commit -a -m publish && git push",
-		"cypress": "cypress open --e2e --browser chrome",
-		"cypress:beta": "cross-env NODE_ENV=beta cypress open --e2e --browser chrome"
+		"test": "vitest",
+		"test:e2e": "cypress open --e2e --browser chrome",
+		"test:e2e:beta": "cross-env NODE_ENV=beta cypress open --e2e --browser chrome"
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
@@ -33,6 +34,8 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^4.5.0",
+		"@vitest/browser": "^1.1.3",
+		"@vue/test-utils": "^2.4.3",
 		"cypress": "^13.6.2",
 		"eslint": "^8.56.0",
 		"eslint-config-standard": "^17.1.0",
@@ -41,9 +44,11 @@
 		"eslint-plugin-n": "^16.5.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-vue": "^9.19.2",
+		"jsdom": "^23.2.0",
 		"jszip": "^3.10.1",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
+		"vitest": "^1.1.3",
 		"vue-template-compiler": "^2.6.14"
 	}
 }
