--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
 		"@micro-zoe/micro-app": "^0.8.10",
+		"@microsoft/fetch-event-source": "^2.0.1",
 		"axios": "^0.24.0",
 		"core-js": "^3.19.3",
 		"cross-env": "^7.0.3",
