--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"dotenv": "^10.0.0",
 		"echarts": "^5.2.2",
 		"element-plus": "^2.4.2",
+		"highlight.js": "^11.9.0",
 		"marked": "^5.0.0",
 		"pinia": "^2.1.7",
 		"qs": "^6.10.2",
