--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
+		"@madder/vite-build": "^0.0.1",
 		"@vitejs/plugin-vue": "^4.5.0",
 		"@vue/test-utils": "^2.4.3",
 		"cypress": "^13.6.2",
