--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"cross-env": "^7.0.3",
 		"crypto-js": "^4.1.1",
 		"dotenv": "^10.0.0",
+		"driver.js": "^1.3.1",
 		"echarts": "^5.2.2",
 		"element-plus": "^2.4.2",
 		"highlight.js": "^11.9.0",
